---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"fn test<>() -> void {}\")"
---
SOURCE_FILE@0..22
  FN@0..22
    SIG@0..20
      FN_KW@0..2 "fn"
      WHITESPACE@2..3 " "
      NAME@3..7
        IDENT@3..7 "test"
      BOUND_TYPES@7..9
        LESS@7..8 "<"
        GREATER@8..9 ">"
      PARAM_LIST@9..11
        LEFT_PAREN@9..10 "("
        RIGHT_PAREN@10..11 ")"
      WHITESPACE@11..12 " "
      RETURN_TYPE@12..20
        ARROW@12..14 "->"
        WHITESPACE@14..15 " "
        NAMED_TYPE@15..20
          PATH@15..20
            PATH_TYPE@15..20
              NAME@15..19
                IDENT@15..19 "void"
              WHITESPACE@19..20 " "
    BLOCK@20..22
      LEFT_BRACE@20..21 "{"
      RIGHT_BRACE@21..22 "}"
